--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/wjutterback/MVC-Tech-Blog#readme",
   "dependencies": {
-    "@types/validator": "^13.1.3",
+    "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
@@ -30,10 +30,10 @@
     "nodemon": "^2.0.7",
     "sequelize": "^6.5.0",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3",
-    "validator": "^10.11.0"
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
     "@types/express-handlebars": "^3.1.0",
     "@types/node": "^14.14.32",
