when nodemon restarts server, it now copies src/views to the dist folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "rootDir": "./src/",
     "outDir": "./dist",
     "moduleResolution": "node",
     "module": "CommonJS",
@@ -8,4 +9,3 @@
   },
   "include": ["./src/"]
 }
-//TODO: fix file structure on compile - maybe, rootdir used to control file structure
