Learned enough about TypeScript to correct errors in/lack of interface creation, Sequelize methods now work without throwing errors, successfully passed information through to handlebars

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "./dist",
     "moduleResolution": "node",
     "module": "CommonJS",
-    "allowJs": true,
+    "allowJs": false,
     "target": "ES6"
   },
   "include": ["./src/"]
