--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "A tech blog showcasing Model-View-Controller functionality",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && ts-node ./dist/server.js",
-    "nodemon": "nodemon --config nodemon.json src/server.ts"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -28,16 +26,8 @@
     "express-handlebars": "^5.2.1",
     "handlebars": "^4.7.7",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7",
     "sequelize": "^6.5.0"
   },
-  "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
-    "@types/express": "^4.17.11",
-    "@types/express-handlebars": "^3.1.0",
-    "@types/node": "^14.14.32",
-    "@types/sequelize": "^4.28.9",
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
-  }
+  "devDependencies": {}
 }
