Hopefully fixed Heroku errors

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wjutterback/MVC-Tech-Blog.git",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [
     "MVC-Tech-Blog"
